# terse

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  README.ja.md  README.md
.claude/agents/: general-purpose.md  implementation.md  quick-fix.md  refactoring.md  research.md
.claude/commands/: continue-session.md  implement-with-agent.md  init-principles.md  review-session.md  validate-claude-md.md
.github/scripts/: get_installation_token.py
.github/workflows/: build-and-test.yml
c/: CMakeLists.txt
c/include/: terse.h  terse_codec.h  terse_event_helpers.h  terse_test.h
c/src/: mini_iconv.c  mini_iconv_tables.h  terse.c  terse_capabilities.c  terse_capabilities.h  terse_codec.c  terse_color.c  terse_cursor.c  terse_detection.c  terse_device.c  terse_device.h  terse_event_helpers.c  terse_graphics.c  terse_graphics.h  terse_handle.h  terse_human68k.c  terse_input.c  terse_input.h  terse_internal.h  terse_keyboard.c  terse_keyboard.h  terse_output.c  terse_output.h  terse_platform.h  terse_platform_stub.c  terse_posix.c  terse_state.c  terse_state.h  terse_style.c  terse_test_internal.h  terse_unicode.c  terse_windows.c
c/tests/: CMakeLists.txt  test_compat.h
c/tests/unit/: terse_ambiguous_width_test.c  terse_char_width_test.c  terse_clipboard_test.c  terse_close_test.c  terse_cursor_shape_test.c  terse_event_helpers_test.c  terse_function_keys_test.c  terse_get_cursor_position_test.c  terse_get_size_test.c  terse_hyperlink_test.c  terse_image_test.c  terse_keyboard_features_test.c  terse_mouse_test.c  terse_nav_keys_verify.c  terse_notification_test.c  terse_open_test.c  terse_options_test.c  terse_output_test.c  terse_paste_test.c  terse_read_event_ctrl_test.c  terse_read_event_test.c  terse_state_stack_test.c  terse_style_test.c  terse_title_test.c  terse_unit_test.c  terse_write_text_test.c  test.h
cmake/: human68k.cmake  terseConfig.cmake.in
docs/: README.md  graphics-roadmap.md  human68k-keyboard.md  macos-profile-detection.md  mini-iconv-plan.md  progress-overview.md  redesign-phase1-plan.md  redesign-phase2-plan.md  redesign-phase3-plan.md  redesign-phase4-plan.md  redesign-phase4_5-plan.md  redesign-phase5-plan.md  redesign-phase5_5-plan.md  redesign-phase6-plan.md  redesign-phase7-plan.md  redesign-proposal.md  terminal-inspection.md  terse-api-user.ja.md  terse-api-user.md  terse-platform-porting.md  terse-specs.md  testing-terminal-detection.md
docs/research/: macos-profile-detection.md  terminal-inspection.md
include/: terse.h
include/terse/: posix.h  term.h
samples/: CMakeLists.txt  README.md  bench_human68k.c  cursor_position_debug.c  cursor_position_test.c  event_logger_demo.c  event_logger_demo_human68k.c  input_complete_demo.c  keyboard_features_test.c  keycode_dump_human68k.c  line_edit_demo.c  mouse_click_demo.c  p0_demo.c  p1_color_demo.c  p1_style_demo.c  p2_features_demo.c  p3_image_demo.c  p3_image_protocol_fallback_demo.c  p3_kitty_graphics_demo.c  p3_notifications_demo.c  p3_sixel_demo.c  raw_sequence_dump.c  raw_terminal.h  sample_compat.h  test_mode_demo.c
scripts/: gen_mini_iconv_tables.py
src/: mini_iconv.h  terse.c  terse_capabilities.c  terse_capabilities.h  terse_codec.c  terse_codec.h  terse_cursor.c  terse_handle.h  terse_human68k.c  terse_input.c  terse_internal.h  terse_keyboard.h  terse_output.c  terse_platform.h  terse_platform_stub.c  terse_posix.c  terse_test.c  terse_unicode.c  terse_unicode.h  terse_windows.c
src/core/: terse.c  terse_buffer.c  terse_buffer.h  terse_handle.h  terse_output.c  terse_output.h  terse_posix_ext.c  terse_state.c
src/term/: mini_iconv_tables.h  terse_capabilities.c  terse_codec.c  terse_codec.h  terse_cursor.c  terse_cursor.h  terse_detection.c  terse_detection.h  terse_input.c  terse_input.h  terse_style.c  terse_style.h  terse_term_internal.h
tests/: CMakeLists.txt  golden_helpers.h  pty_helpers.h  test_compat.h  test_env.h
tests/golden/: basic16_foreground_effects.txt  truecolor_foreground.txt
tests/unit/: terse_ambiguous_width_test.c  terse_basic4_test.c  terse_buffer_test.c  terse_char_width_test.c  terse_convert_encoding_test.c  terse_encode_utf8_test.c  terse_event_helpers_test.c  terse_function_keys_test.c  terse_get_cursor_position_test.c  terse_golden_test.c  terse_hyperlink_test.c  terse_image_test.c  terse_keyboard_features_test.c  terse_nav_keys_verify.c  terse_open_test.c  terse_options_test.c  terse_output_test.c  terse_posix_ext_test.c  terse_pty_test.c  terse_read_event_ctrl_test.c  terse_read_event_test.c  terse_require_test.c  terse_state_stack_test.c  terse_style_test.c  terse_unit_test.c
tools/: CMakeLists.txt  build-human68k.sh  inspect_terminal.c  profile_info.c
